Lots of design updates

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,14 +10,15 @@
 @import './styles/typography'; // Text styles and helpers
 @import './styles/elements'; // Defaults for img, buttons, hr, ul, etc
 @import './styles/inputrange'; // Sliders
+@import './styles/inputradio'; // Radio Buttons
 
 html {
-  background-color: $color-haiti; // the background color if you scroll too far
+  background-color: $color-catskill; // the background color if you scroll too far
 }
 
 body {
   min-height: 100vh;
   padding-bottom: 12rem; // Prevent object being hidden by the keyboard
-  background: $color-haiti;
+  background: $color-catskill;
   // background: #ddd;
 }
