--- a/src/components/SynthModules.module.scss
+++ b/src/components/SynthModules.module.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 1fr;
   gap: 0.75rem;
   align-items: start;
-  padding: 0.75rem;
+  padding: 0.25rem 0 0 0;
   @include for-tablet-portrait-up {
     grid-template-columns: 1fr 1fr;
   }
