--- a/src/components/oscillators/Oscillators.module.scss
+++ b/src/components/oscillators/Oscillators.module.scss
@@ -2,5 +2,5 @@
 @import '../../styles/mixins';
 // @import '../../styles/inputrange';
 
-@include synth-module-color($color-azure100);
-@include range-slider-color($color-azure100, $color-azure50);
+// @include synth-module-color($color-azure100);
+// @include range-slider-color($color-azure100, $color-azure50);
