--- a/src/components/volumeEnvelope/VolumeEnvelope.module.scss
+++ b/src/components/volumeEnvelope/VolumeEnvelope.module.scss
@@ -1,5 +1,5 @@
 @import '../../styles/variables';
 @import '../../styles/mixins';
 
-@include synth-module-color($color-anzac100);
-@include range-slider-color($color-anzac100, $color-anzac50);
+// @include synth-module-color($color-anzac100);
+// @include range-slider-color($color-anzac100, $color-anzac50);
