--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -16,85 +16,67 @@ img {
 
 .synthModuleContainer {
   position: relative;
-  width: 100%;
+  width: calc(100% - 3rem);
   height: auto;
   margin-bottom: 1rem;
-  border: 3px solid $color-white;
-  border-radius: $radius-super 0 $radius-super 0;
-  &::after {
-    display: block;
-    content: '';
-    position: absolute;
-    top: -0.125rem;
-    left: -0.125rem;
-    width: 2.625rem;
-    height: 2rem;
-    border-radius: $radius-super 0 0 0;
-    background: $color-white;
-  }
 }
 
 .synthModuleHeader {
   position: relative;
-  width: calc(100% - 2.5rem);
+  width: 100%;
   height: 1.5rem;
-  background: $color-white;
-  margin-left: 2.5rem;
-  padding: 0 1rem 0 0.5rem;
-  color: $color-haiti;
-  // @include synth-module-inner-corner($color-white);
-  &::after {
-    display: block;
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 0.5rem;
-    height: 0.5rem;
-    // border-radius: $radius-super 0 0 0;
-    // background: $color-white;
-
-    background: radial-gradient(
-      circle at 100% 100%,
-      transparent 0.5rem,
-      $color-white calc(0.5rem + 0.5px)
-    ); // adding .5px in the calc smooths out a pixel-y transition;
-  }
+  padding: 0 1rem 0 3rem;
+  color: $color-shark;
 }
 
 .synthModuleInner {
   display: grid;
-  grid-template-columns: 2.5rem auto;
+  grid-template-columns: 2rem auto;
 }
 
 .synthModuleSidebar {
-  background: $color-white;
-  color: $color-haiti;
-  padding: 0 calcRem(3) 0 0;
+  color: $color-shark;
+  padding: 0;
 }
 
+// Borders for all Control modules
 .synthModuleControls {
   display: flex;
   flex-direction: column;
-  padding: 0.75rem;
-  -webkit-font-smoothing: antialiased; // All of the text is light on a dark background
+  padding: 0 0 0.375rem 0.625rem;
+  border-left: 2px solid $color-shark;
+  border-bottom: 2px solid $color-shark;
 }
 
+// Top Border for first Control component
+ul li:nth-of-type(1) .synthModuleControls {
+  border-top: 2px solid $color-shark;
+  border-radius: 0.5rem 0 0 0;
+}
+
+// Group for the Label, Slider, and Number Input
+// TODO: Rename this to something that makes more sense
 .labelLayout {
   display: grid;
   grid-template-columns: 3.5rem auto calcRem(58);
   align-items: center;
+  padding-right: 0.75rem;
 }
 
+// Number inputs
 input[type='number'],
 select {
   width: calcRem(58);
-  height: calcRem(29);
-  background: $color-sky10;
-  border: 1px solid $color-sky50;
-  color: $color-lcd-green;
-  border-radius: 3px;
-  padding: 0.375rem 0.25rem 0.5rem;
+  height: calcRem(30);
+  background: $color-shark;
+  border: none;
+  border-radius: 2px;
+  // padding: 0.375rem 0.25rem 0.5rem;
+  padding: calcRem(7) calcRem(3) 0.5rem calcRem(6);
+  color: $color-tahuna;
+  -webkit-font-smoothing: antialiased; // Prevent light text looking too bold in Chrome
+  text-align: center;
+  text-shadow: 0 0 8px $color-tahuna50;
 }
 
 input[type='number']::-webkit-inner-spin-button,
@@ -103,184 +85,111 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.inlineIcon {
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  vertical-align: text-bottom;
+// Select Button groups
+.selectButtonGroup {
+  position: relative;
+  margin-top: -0.875rem;
+  display: grid;
+  // grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+  column-gap: 0.625rem;
+  border: 1px solid $color-shark;
+  border-radius: 0.25rem;
+  padding: 0.75rem 0.625rem 0.625rem;
+  // Hide the generic radio buttons
+  input[type='radio'] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+  }
+  // Style the new buttons
+  label {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 2.5rem;
+    background: $color-shark;
+    border: none;
+    border-radius: 2px;
+    justify-content: flex-end;
+    align-items: center;
+    color: $color-tahuna;
+    -webkit-font-smoothing: antialiased; // Prevent light text looking too bold in Chrome
+    text-align: center;
+    text-shadow: 0 0 8px $color-tahuna50;
+    cursor: pointer;
+    &::after {
+      content: '';
+      display: block;
+      width: calc(100% - 0.5rem);
+      height: 0.125rem;
+      margin: 0.5rem 0 0.25rem;
+      border-radius: 2px;
+      background: transparent;
+    }
+  }
+  // Active button style
+  input[type='radio']:checked + label {
+    &::after {
+      background: $color-tahuna;
+      box-shadow: 0 0 8px $color-tahuna50;
+    }
+  }
+  // Focused button style
+  // TODO: Add focus style
+  input[type='radio']:focus + label {
+    // border: 2px dashed #444;
+  }
 }
 
-// .btn-reset {
-//   appearance: none;
-//   background: transparent;
-//   padding: 0;
-//   border: 0;
-//   cursor: pointer;
-//   &:focus {
-//     outline: 0;
-//   }
-// }
-
-button,
-.button,
-%button {
-  display: block;
-  border: none;
-  padding: 1rem 2rem;
-  border-radius: $radius-medium;
-  @extend %buttonText;
-  text-decoration: none;
-  background: $color-white;
-  color: $color-aztek;
-  pointer-events: auto;
-  cursor: pointer;
-  text-align: center;
-  transition: background 0s ease-in-out, transform 0.2s;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-// .buttonNext,
-// %buttonNext {
-//   position: relative;
-//   width: calc(100% - 2rem);
-//   margin: 0 auto 1rem 1rem;
-//   background: $color-matisse;
-//   color: $color-white;
-//   border-radius: $radius-pill;
-//   transition: transform 0.2s, background 0.2s;
-//   box-shadow: $box-shadow-small;
-//   -webkit-font-smoothing: antialiased; // Prevent white text looking too bold in Chrome
-//   @include for-tablet-landscape-up {
-//     width: calc(71.43% - 2rem);
-//   }
-//   &:hover {
-//     color: $color-white;
-//     background: $color-jellybean;
-//   }
-// }
-
-// .buttonNextTest,
-// %buttonNextTest {
+// Radio Buttons
+// .waveSelectContainer input[type='radio'] {
+//   opacity: 0;
 //   position: fixed;
-//   width: calc(100% - 2rem);
-//   left: 1rem;
-//   bottom: calcRem(108);
-//   background: $color-matisse;
-//   color: $color-white;
-//   border-radius: $radius-pill;
-//   transition: transform 0.2s, background 0.2s;
-//   box-shadow: $box-shadow-small;
-//   -webkit-font-smoothing: antialiased; // Prevent white text looking too bold in Chrome
-//   z-index: 10;
-//   @include for-tablet-landscape-up {
-//     width: 60%;
-//     bottom: 4rem;
-//     left: 50%;
-//     transform: translateX(-50%);
-//   }
-//   &:hover {
-//     color: $color-white;
-//     background: $color-jellybean;
-//   }
+//   width: 0;
 // }
 
-// .buttonSubmit {
-//   position: relative;
+// .waveSelectContainer label {
+//   display: flex;
 //   width: 100%;
-//   margin: 0 auto;
-//   background: $color-bayou;
-//   color: $color-white;
-//   border-radius: $radius-pill;
-//   transition: transform 0.2s, background 0.2s;
-//   box-shadow: $box-shadow-small;
-//   -webkit-font-smoothing: antialiased; // Prevent white text looking too bold in Chrome
-//   @include for-tablet-portrait-up {
-//     min-width: 75%;
-//     width: auto;
-//   }
-//   @include for-tablet-landscape-up {
-//     // width: calc(71.43% - 2rem);
-//     min-width: 60%;
-//   }
-//   &:hover {
-//     color: $color-white;
-//     background: $color-biscay;
-//   }
-// }
-
-// .buttonIncorrectDisabled {
-//   opacity: 0.7;
-//   box-shadow: none;
-//   cursor: default;
-//   &:hover {
-//     transform: none;
-//   }
-// }
-
-// .buttonCorrectDisabled {
-//   opacity: 1;
-//   cursor: default;
-//   &:hover {
-//     transform: none;
-//   }
-// }
-
-// .navBtnBg {
-//   // @include for-tablet-landscape-up {
-//   border-radius: 10rem;
-//   &:hover {
-//     background: $color-malibu;
-//   }
-//   // }
-// }
-
-// .hotspotLoading {
-//   opacity: 0; // Prevent a flash of an unstyled button
-// }
-
-// .hotspot {
-//   display: block;
-//   opacity: 1;
-//   width: 2rem;
-//   height: 2rem;
-//   border-radius: $radius-pill;
-//   padding: 0;
-//   background: linear-gradient($color-white, $color-athens);
-//   color: $color-matisse;
-//   border: 2px solid $color-matisse;
-//   line-height: 1;
-//   transition: transform 0.2s;
-//   transform-origin: center center;
+//   height: 2.5rem;
+//   background: $color-shark;
+//   border: none;
+//   border-radius: 2px;
+//   justify-content: center;
+//   align-items: center;
+//   color: $color-tahuna;
+//   -webkit-font-smoothing: antialiased; // Prevent light text looking too bold in Chrome
 //   text-align: center;
-//   &:hover {
-//     transform: scale(1.2);
-//     // background: $color-malibu;
-//     color: $color-matisse;
-//     z-index: 5;
-//   }
-//   // Expirmenting with making the clickable area bigger than the visible button
-//   &:before {
-//     content: '';
-//     position: absolute;
-//     left: -0.5rem;
-//     top: -0.5rem;
-//     width: 3rem;
-//     height: 3rem;
-//     border-radius: 3rem;
-//     // background: #e83474;
-//     /*Other styles*/
-//   }
+//   text-shadow: 0 0 8px $color-tahuna50;
+//   cursor: pointer;
 // }
 
-// .hotspotActive,
-// .hotspotActive:hover {
-//   color: $color-carmine;
-//   border: 2px solid $color-carmine;
+// .inlineIcon {
+//   display: inline-block;
+//   width: 1.5rem;
+//   height: 1.5rem;
+//   vertical-align: text-bottom;
 // }
 
-// button:focus {
-//   outline:0;
+// button,
+// .button,
+// %button {
+//   display: block;
+//   border: none;
+//   padding: 1rem 2rem;
+//   border-radius: $radius-medium;
+//   @extend %buttonText;
+//   text-decoration: none;
+//   background: $color-white;
+//   color: $color-aztek;
+//   pointer-events: auto;
+//   cursor: pointer;
+//   text-align: center;
+//   transition: background 0s ease-in-out, transform 0.2s;
+//   -webkit-appearance: none;
+//   -moz-appearance: none;
 // }
 
 /* Remove outline for non-keyboard :focus */
@@ -347,60 +256,5 @@ Colors
 // .svgColorAztek {
 //   svg path {
 //     fill: $color-aztek;
-//   }
-// }
-
-// button {
-//   &:hover {
-//     .svgColorAztek {
-//       svg path {
-//         fill: $color-jellybean;
-//       }
-//     }
-//   }
-// }
-
-// .svgColorMatisse {
-//   svg path {
-//     fill: $color-matisse;
-//   }
-// }
-
-/* ----------------------------
-Rules / Underlines - 
----------------------------- */
-// Used with star rule SVG
-// .starRule {
-//   width: calc(100% - 2rem);
-//   margin: 2.5rem auto 2rem;
-//   @include for-tablet-landscape-up {
-//     width: 60%;
-//     margin: 3rem auto;
-//   }
-// }
-
-// .shortRuleRedLeft {
-//   &::after {
-//     content: '';
-//     display: block;
-//     width: 2.5rem;
-//     height: 0.125rem;
-//     position: absolute;
-//     bottom: 0;
-//     background-color: $color-rose;
-//   }
-// }
-
-// .shortRuleRedCenter {
-//   &::after {
-//     content: '';
-//     display: block;
-//     width: 2.5rem;
-//     height: 0.125rem;
-//     position: absolute;
-//     bottom: 0;
-//     left: 50%;
-//     transform: translateX(-50%);
-//     background-color: $color-rose;
 //   }
 // }
