--- a/src/styles/_inputrange.scss
+++ b/src/styles/_inputrange.scss
@@ -1,4 +1,11 @@
+.rangeContainer {
+  position: relative;
+  display: flex;
+  height: 2.5rem;
+  z-index: 0;
+}
 input[type='range'] {
+  position: relative;
   -webkit-appearance: none;
   // margin: 18px 0;
   width: 100%;
@@ -11,54 +18,123 @@ input[type='range']:focus {
 // Webkit browsers
 input[type='range']::-webkit-slider-runnable-track {
   width: 100%;
-  height: 0.25rem;
+  height: 0.75rem;
   cursor: pointer;
   // animate: 0.2s;
   // box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #ffffff;
-  border-radius: 0.125rem;
+  background: $color-shark;
+  border-radius: 1rem;
+  border: 4px solid $color-catskill;
   // border: 0.2px solid #010101;
 }
 
 input[type='range']:focus::-webkit-slider-runnable-track {
-  background: #dddddd;
+  // TODO: Add a Focus Style
+  // background: red;
 }
 
 input[type='range']::-webkit-slider-thumb {
-  // box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  // border: 1px solid #000000;
-  height: 1rem;
-  width: 1rem;
-  border-radius: 50%;
-  background: #ffffff;
+  height: calcRem(30);
+  width: calcRem(11);
+  border-radius: 2px;
+  background: $color-dodger;
+  border-left: 2px solid $color-cobalt;
+  border-right: 2px solid $color-cobalt;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -0.375rem;
+  margin-top: calcRem(-13);
+  box-shadow: 0 0 3px $color-dodger;
 }
 
 // Firefox
 input[type='range']::-moz-range-track {
   width: 100%;
-  height: 0.25rem;
+  height: 0.75rem;
   cursor: pointer;
   // animate: 0.2s;
   // box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #ffffff;
-  border-radius: 0.125rem;
+  background: $color-shark;
+  border-radius: 1rem;
+  border: 4px solid $color-catskill;
   // border: 0.2px solid #010101;
 }
 
 // TODO: add moz focus?
 
 input[type='range']::-moz-range-thumb {
-  // box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid transparent;
-  height: 1rem;
-  width: 1rem;
-  border-radius: 50%;
-  background: #ffffff;
+  height: calcRem(30);
+  width: calcRem(11);
+  border-radius: 2px;
+  background: $color-dodger;
+  border-left: 2px solid $color-cobalt;
+  border-right: 2px solid $color-cobalt;
   cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: calcRem(-13);
+  box-shadow: 0 0 3px $color-dodger;
 }
+
+.rangeTickmarksContainer {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2.5rem;
+  justify-content: space-between;
+  padding: 0 9px;
+  // background-color: red;
+  z-index: -1;
+}
+
+.rangeTickmark {
+  height: 100%;
+  width: 1px;
+  background: $color-shark;
+}
+
+// Slider colors. These need to be here because to work they can't be namespaced by the scss modules
+.semitone {
+  input[type='range']::-webkit-slider-thumb {
+    background-color: $color-dodger;
+    border-color: $color-cobalt;
+    box-shadow: 0 0 3px $color-dodger;
+  }
+  input[type='range']::-moz-range-thumb {
+    background-color: $color-dodger;
+    border-color: $color-cobalt;
+    box-shadow: 0 0 3px $color-dodger;
+  }
+}
+
+.detune {
+  input[type='range']::-webkit-slider-thumb {
+    background-color: $color-jaffa;
+    border-color: $color-beech;
+    box-shadow: 0 0 3px $color-jaffa;
+  }
+  input[type='range']::-moz-range-thumb {
+    background-color: $color-jaffa;
+    border-color: $color-beech;
+    box-shadow: 0 0 3px $color-jaffa;
+  }
+}
+
+.volume {
+  input[type='range']::-webkit-slider-thumb {
+    background-color: $color-shamrock;
+    border-color: $color-sap;
+    box-shadow: 0 0 3px $color-shamrock;
+  }
+  input[type='range']::-moz-range-thumb {
+    background-color: $color-shamrock;
+    border-color: $color-sap;
+    box-shadow: 0 0 3px $color-shamrock;
+  }
+}
+// input[type='range']::-webkit-slider-thumb
+// .detune
+// {
 
 // Internet Explorer
 // input[type='range']::-ms-track {
