--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,13 +4,13 @@ button,
 input,
 select,
 textarea {
-  color: $color-white;
+  color: $color-shark;
 }
 
 body {
   font-size: 1rem;
   font-family: $font-normal;
-  color: $color-white;
+  color: $color-shark;
   font-weight: 600;
   // white-space: pre-line; //Without this, new lines (\n) in JSON are ignored. But it adds space to the top of the page too...
 }
@@ -86,11 +86,22 @@ h3,
 }
 
 label,
-.label {
+.label,
+%label {
   font: 600 calcRem(18) / calc(18 / 18) $font-cond;
   text-transform: uppercase;
   letter-spacing: 0.04em;
-  margin: 0.5rem 0;
+  margin: 0.375rem 0;
+}
+
+.labelBg {
+  @extend %label;
+  background-color: $color-catskill;
+  width: max-content;
+  margin-left: 0.5rem;
+  padding: 0 0.25rem;
+  text-align: center;
+  z-index: 1;
 }
 
 h4,
@@ -124,12 +135,16 @@ h6,
 }
 
 input,
+.input,
 select {
   font: 400 calcRem(15) / 1 $font-mono;
   text-align: right;
   text-transform: none;
-  letter-spacing: normal;
+  letter-spacing: 0.08em;
   margin: 0;
+  &:hover {
+    font-weight: 600;
+  }
 }
 
 p,
