--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,3 +1,4 @@
+@import './variables';
 @import './typography';
 @import './mixins';
 
@@ -16,7 +17,7 @@ img {
 
 .synthModuleContainer {
   position: relative;
-  width: calc(100% - 3rem);
+  width: 100%;
   height: auto;
   margin-bottom: 1rem;
 }
@@ -36,7 +37,7 @@ img {
 
 .synthModuleSidebar {
   color: $color-shark;
-  padding: 0;
+  padding: 0.375rem 0 0 0;
 }
 
 // Borders for all Control modules
@@ -44,14 +45,17 @@ img {
   display: flex;
   flex-direction: column;
   padding: 0 0 0.375rem 0.625rem;
+  border-top: 2px solid $color-shark; // Invisible border so that the all modules have the same spacing as the first one
   border-left: 2px solid $color-shark;
-  border-bottom: 2px solid $color-shark;
 }
 
 // Top Border for first Control component
-ul li:nth-of-type(1) .synthModuleControls {
-  border-top: 2px solid $color-shark;
+ul li:first-of-type .synthModuleControls {
+  // border-top: 2px solid $color-shark;
   border-radius: 0.5rem 0 0 0;
+}
+ul li:last-of-type .synthModuleControls {
+  border-bottom: 2px solid $color-shark;
 }
 
 // Group for the Label, Slider, and Number Input
@@ -61,6 +65,7 @@ ul li:nth-of-type(1) .synthModuleControls {
   grid-template-columns: 3.5rem auto calcRem(58);
   align-items: center;
   padding-right: 0.75rem;
+  text-align: center;
 }
 
 // Number inputs
@@ -73,10 +78,13 @@ select {
   border-radius: 2px;
   // padding: 0.375rem 0.25rem 0.5rem;
   padding: calcRem(7) calcRem(3) 0.5rem calcRem(6);
-  color: $color-tahuna;
+  color: $color-catskill;
   -webkit-font-smoothing: antialiased; // Prevent light text looking too bold in Chrome
   text-align: center;
-  text-shadow: 0 0 8px $color-tahuna50;
+  // text-shadow: 0 0 8px $color-tahuna50;
+  &:hover {
+    -webkit-text-stroke: 0.5px $color-catskill;
+  }
 }
 
 input[type='number']::-webkit-inner-spin-button,
@@ -86,17 +94,29 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 // Select Button groups
+// --- Style and position the group label
+.synthModuleControls .labelBg {
+  @extend %label;
+  background-color: $color-catskill;
+  width: 3rem;
+  margin: 0.375rem 0 0.4875rem 0.25rem;
+  // padding: 0 0.25rem;
+  text-align: center;
+  z-index: 1;
+}
 .selectButtonGroup {
   position: relative;
   margin-top: -0.875rem;
   display: grid;
   // grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
+  grid-auto-columns: 1fr;
   grid-auto-flow: column;
   column-gap: 0.625rem;
   border: 1px solid $color-shark;
   border-radius: 0.25rem;
   padding: 0.75rem 0.625rem 0.625rem;
+
   // Hide the generic radio buttons
   input[type='radio'] {
     opacity: 0;
@@ -114,26 +134,51 @@ input[type='number']::-webkit-outer-spin-button {
     border-radius: 2px;
     justify-content: flex-end;
     align-items: center;
-    color: $color-tahuna;
+    color: $color-catskill;
     -webkit-font-smoothing: antialiased; // Prevent light text looking too bold in Chrome
     text-align: center;
-    text-shadow: 0 0 8px $color-tahuna50;
+    // text-shadow: 0 0 8px $color-tahuna50;
     cursor: pointer;
     &::after {
       content: '';
       display: block;
       width: calc(100% - 0.5rem);
-      height: 0.125rem;
-      margin: 0.5rem 0 0.25rem;
+      margin: 0.4375rem 0 0.25rem;
       border-radius: 2px;
+      padding-top: 0.125rem;
       background: transparent;
+    }
+    svg {
+      padding: 0.625rem 0 0;
+      polyline,
+      path {
+        stroke: $color-catskill;
+        stroke-width: 1px;
+        fill: none;
+      }
+    }
+    &:hover {
+      -webkit-text-stroke: 0.5px $color-catskill;
+      svg polyline,
+      svg path {
+        stroke-width: 1.5px;
+      }
     }
   }
   // Active button style
   input[type='radio']:checked + label {
+    color: #78a5ff;
+    &:hover {
+      -webkit-text-stroke: 0.5px #78a5ff;
+    }
     &::after {
-      background: $color-tahuna;
-      box-shadow: 0 0 8px $color-tahuna50;
+      background: #78a5ff;
+      // box-shadow: 0 0 8px $color-tahuna50;
+    }
+    svg polyline,
+    svg path {
+      stroke: #78a5ff;
+      stroke-width: 1.5px;
     }
   }
   // Focused button style
