--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -28,7 +28,7 @@ a {
 }
 
 .displaySub {
-  font: 800 calcRem(16) / 1.2 $font-cond;
+  font: 600 calcRem(16) / 1.2 $font-cond;
   text-transform: uppercase;
   letter-spacing: 0.07em;
   margin: 0;
@@ -36,7 +36,7 @@ a {
 }
 
 .display {
-  font: 600 calcRem(72) / 0.6 $font-comp;
+  font: 500 calcRem(72) / 0.6 $font-comp;
   text-transform: none;
   letter-spacing: normal;
   margin: 0;
@@ -46,7 +46,7 @@ a {
 h1,
 .h1,
 %h1 {
-  font: 600 calcRem(48) / calc(56 / 48) $font-wide;
+  font: 500 calcRem(48) / calc(56 / 48) $font-wide;
   text-transform: uppercase;
   letter-spacing: 0.02em;
   margin: 0;
@@ -64,7 +64,7 @@ h1,
 h2,
 .h2,
 %h2 {
-  font: 600 calcRem(14) / 1.3 $font-wide;
+  font: 500 calcRem(14) / 1.3 $font-wide;
   text-transform: uppercase;
   letter-spacing: 0.07em;
   margin: 0;
@@ -88,21 +88,21 @@ h3,
 label,
 .label,
 %label {
-  font: 600 calcRem(18) / calc(18 / 18) $font-cond;
+  font: 600 calcRem(16) / calc(16 / 16) $font-cond;
   text-transform: uppercase;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.07em;
   margin: 0.375rem 0;
 }
 
-.labelBg {
-  @extend %label;
-  background-color: $color-catskill;
-  width: max-content;
-  margin-left: 0.5rem;
-  padding: 0 0.25rem;
-  text-align: center;
-  z-index: 1;
-}
+// .labelBg {
+//   @extend %label;
+//   background-color: $color-catskill;
+//   width: max-content;
+//   margin-left: 0.5rem;
+//   padding: 0 0.25rem;
+//   text-align: center;
+//   z-index: 1;
+// }
 
 h4,
 .h4,
@@ -142,9 +142,9 @@ select {
   text-transform: none;
   letter-spacing: 0.08em;
   margin: 0;
-  &:hover {
-    font-weight: 600;
-  }
+  // &:hover {
+  //   font-weight: 600;
+  // }
 }
 
 p,
