--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -58,14 +58,72 @@ ul li:last-of-type .synthModuleControls {
   border-bottom: 2px solid $color-shark;
 }
 
-// Group for the Label, Slider, and Number Input
-// TODO: Rename this to something that makes more sense
-.labelLayout {
+// Container for the Label, Slider, and Number Input
+.sliderContainer {
   display: grid;
   grid-template-columns: 3.5rem auto calcRem(58);
   align-items: center;
   padding-right: 0.75rem;
   text-align: center;
+}
+
+.sliderLabel {
+  padding-bottom: 0.3125rem;
+}
+
+// Group for the envelope sliders
+.envelopeSliderGroup {
+  position: relative;
+  margin-top: -3.25rem;
+  display: flex;
+  justify-content: space-evenly;
+  // grid-template-columns: repeat(4, 3.625rem);
+  width: 100%;
+  // column-gap: calc(2vw);
+  // margin: 0 auto;
+  // grid-template-columns: 1fr;
+}
+
+.sliderContainer.envelopeSlider {
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto 8rem;
+  // grid-template-columns: auto 1.875rem 3rem;
+  // justify-self: start;
+  // margin: 0 0.375rem;
+  padding: 0;
+  .sliderLabel {
+    grid-row: 1;
+    font: 400 0.9375rem/1 $font-mono;
+    color: $color-catskill;
+    -webkit-font-smoothing: antialiased;
+    padding: 0;
+  }
+  .rangeContainer {
+    grid-row: 3;
+    input[type='range'] {
+      position: absolute;
+      transform: rotate(-90deg);
+      transform-origin: center left;
+      width: 8rem; // Displaying as the height, since it's rotated
+      left: 50%;
+      top: 4.875rem;
+      // left: -50%;
+      // top: 16px;
+    }
+    .rangeTickmarksContainer {
+      transform: rotate(-90deg);
+      transform-origin: center left;
+      width: 8rem; // Displaying as the height, since it's rotated
+      left: 50%;
+      top: 4rem;
+    }
+  }
+  .sliderNumber {
+    grid-row: 2;
+    margin-bottom: 0.25rem;
+    // grid-column-start: 2;
+    // transform: rotate(90deg);
+  }
 }
 
 // Number inputs
