--- a/src/styles/_inputrange.scss
+++ b/src/styles/_inputrange.scss
@@ -10,6 +10,7 @@ input[type='range'] {
   // margin: 18px 0;
   width: 100%;
   background: transparent;
+  touch-action: none; // On touchscreens, prevents the page from scrolling when you're adjusting the slider
 }
 input[type='range']:focus {
   outline: none;
@@ -35,17 +36,19 @@ input[type='range']:focus::-webkit-slider-runnable-track {
 
 input[type='range']::-webkit-slider-thumb {
   height: calcRem(30);
+  // height: calcRem(42);
   width: calcRem(11);
   border-radius: 2px;
   background: $color-cobalt;
   background: linear-gradient(90deg, $color-dodger 50%, $color-cobalt 50%);
-  // border-left: 2px solid $color-cobalt;
-  // border-right: 2px solid $color-cobalt;
-  // border-left: 2px solid $color-shark;
-  // border-right: 2px solid $color-shark;
+  // border-left: 1rem solid red;
+  // border-right: 1rem solid red;
+  // border-top: 6px solid red;
+  // border-bottom: 6px solid red;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: calcRem(-13);
+  // margin-top: calcRem(-19);
   box-shadow: 0 2px 2px $color-shark30;
 }
 
@@ -155,6 +158,7 @@ input[type='range']::-moz-range-thumb {
     box-shadow: 0 2px 2px $color-shark30;
   }
 }
+
 // input[type='range']::-webkit-slider-thumb
 // .detune
 // {
