--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -69,7 +69,7 @@ $color-tahuna50: hsla(61, 56, 86, 0.5); // glow/shadows
 // Design V1
 $color-aztek: hsla(208, 72, 15, 1); // #0B2943 Main font color
 $color-jellybean: hsla(208, 63, 41, 1); // #276DAA Link and button hover
-$color-malibu: hsla(208, 68, 93, 1); // #E1EEF9 Nav button hover background
+// $color-malibu: hsla(208, 68, 93, 1); // #E1EEF9 Nav button hover background
 
 $color-mariner: hsla(208, 75, 44, 1); // #1C76C4 Only used for the Focus Outline
 
