--- a/src/components/SynthModules.module.scss
+++ b/src/components/SynthModules.module.scss
@@ -5,9 +5,9 @@
   display: grid;
   width: calc(100% - 3rem);
   grid-template-columns: 1fr;
-  gap: 0.75rem;
+  gap: 0.25rem;
   align-items: start;
-  padding: 0.25rem 0 0 0;
+  padding: 0;
   @include for-tablet-portrait-up {
     grid-template-columns: 1fr 1fr;
   }
