--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -19,15 +19,19 @@ img {
   position: relative;
   width: 100%;
   height: auto;
-  margin-bottom: 1rem;
+  // margin: 0.25rem;
+  padding: 0.5rem 1rem 0.5rem 0.75rem;
+  border-radius: 1rem;
+  background: $color-catskill;
 }
 
 .synthModuleHeader {
   position: relative;
   width: 100%;
-  height: 1.5rem;
-  padding: 0 1rem 0 3rem;
-  color: $color-shark;
+  // height: 1.5rem;
+  padding: 0 0 0.75rem;
+  // padding: 0 1rem 0 3rem;
+  // color: $color-shark;
 }
 
 .synthModuleInner {
@@ -45,18 +49,18 @@ img {
   display: flex;
   flex-direction: column;
   padding: 0 0 0.375rem 0.625rem;
-  border-top: 2px solid $color-shark; // Invisible border so that the all modules have the same spacing as the first one
-  border-left: 2px solid $color-shark;
+  // border-top: 2px solid $color-shark; // Invisible border so that the all modules have the same spacing as the first one
+  // border-left: 2px solid $color-shark;
 }
 
 // Top Border for first Control component
-ul li:first-of-type .synthModuleControls {
-  // border-top: 2px solid $color-shark;
-  border-radius: 0.5rem 0 0 0;
-}
-ul li:last-of-type .synthModuleControls {
-  border-bottom: 2px solid $color-shark;
-}
+// ul li:first-of-type .synthModuleControls {
+//   // border-top: 2px solid $color-shark;
+//   border-radius: 0.5rem 0 0 0;
+// }
+// ul li:last-of-type .synthModuleControls {
+//   border-bottom: 2px solid $color-shark;
+// }
 
 // Container for the Label, Slider, and Number Input
 .sliderContainer {
@@ -171,7 +175,7 @@ input[type='number']::-webkit-outer-spin-button {
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
   column-gap: 0.625rem;
-  border: 1px solid $color-shark;
+  border: 2px solid $color-shark;
   border-radius: 0.25rem;
   padding: 0.75rem 0.625rem 0.625rem;
 
