--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -28,7 +28,7 @@ a {
 }
 
 .displaySub {
-  font: 600 calcRem(16) / 1.2 $font-cond;
+  font: 700 calcRem(16) / 1.2 $font-cond;
   text-transform: uppercase;
   letter-spacing: 0.07em;
   margin: 0;
@@ -36,7 +36,7 @@ a {
 }
 
 .display {
-  font: 500 calcRem(72) / 0.6 $font-comp;
+  font: 800 calcRem(72) / 0.6 $font-cond;
   text-transform: none;
   letter-spacing: normal;
   margin: 0;
@@ -64,10 +64,15 @@ h1,
 h2,
 .h2,
 %h2 {
-  font: 500 calcRem(14) / 1.3 $font-wide;
+  font: 800 calcRem(24) / 1 $font-wide;
   text-transform: uppercase;
-  letter-spacing: 0.07em;
+  letter-spacing: 0.0625em;
   margin: 0;
+  text-align: center;
+  color: $color-catskill;
+  -webkit-text-stroke: 2px $color-shark;
+  // text-shadow: 0 0.25rem 0 $color-shark; // does not include stroke width
+  filter: drop-shadow(0 0.25rem 0 $color-shark); // includes storke width
   // @include for-tablet-portrait-up {
   //   font: 600 calcRem(32) / calc(40 / 32) $font-wide;
   // }
@@ -88,7 +93,7 @@ h3,
 label,
 .label,
 %label {
-  font: 600 calcRem(16) / calc(16 / 16) $font-cond;
+  font: 700 calcRem(16) / calc(16 / 16) $font-cond;
   text-transform: uppercase;
   letter-spacing: 0.07em;
   margin: 0.375rem 0;
@@ -107,7 +112,7 @@ label,
 h4,
 .h4,
 %h4 {
-  font: 600 calcRem(22) / calc(32 / 22) $font-comp;
+  font: 700 calcRem(22) / calc(32 / 22) $font-cond;
   text-transform: none;
   letter-spacing: normal;
   margin: 0;
