--- a/src/components/oscillators/Oscillators.module.scss
+++ b/src/components/oscillators/Oscillators.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+// @import '../../styles/variables';
+// @import '../../styles/mixins';
 // @import '../../styles/inputrange';
 
 // @include synth-module-color($color-azure100);
