--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+@use './members' as *;
+
 /* Adapted from HTML5 Boilerplate and modern-normalize | MIT License | https://github.com/sindresorhus/modern-normalize */
 
 /* Document
