--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,6 +1,8 @@
-@import './variables';
-@import './typography';
-@import './mixins';
+// @import './variables';
+// @import './typography';
+// @import './mixins';
+@use './members' as *;
+@use './typography' as *;
 
 img {
   display: block;
